Toggle buttons refactoring complete

--- a/Common.blocks/FormElements/-Toggle/FormElements-Toggle.scss
+++ b/Common.blocks/FormElements/-Toggle/FormElements-Toggle.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .FormElements-RadioButtons {
-    margin-bottom: 41px;
+  .FormElements-Toggle {
+
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .FormElements-RadioButtons {
+  .FormElements-Toggle {
 
   }
 }
