--- a/Common.blocks/ToggleButton/ToggleButton.pug
+++ b/Common.blocks/ToggleButton/ToggleButton.pug
@@ -1,4 +1,2 @@
 mixin ToggleButton(content)
-    form.ToggleButton&attributes(attributes) #{content}
-        if block
-            block
+    input.ToggleButton&attributes(attributes)
