--- a/Common.blocks/ToggleButton/ToggleButton.scss
+++ b/Common.blocks/ToggleButton/ToggleButton.scss
@@ -24,8 +24,30 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .ToggleButton {
-    display: flex;
-    flex-direction: row;
+    margin: 0;
+  }
+  .m_switch {
+    width: 40px;
+    height: 20px;
+    background: $background;
+    /* Primary Color */
+    border: 1px solid $DatepickerArrowColor;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+  .m_switch_element {
+    background: $DatepickerGradient;
+    border-radius: 10px;
+    width: 12px;
+    height: 12px;
+    top: 3px;
+    left: 3px;
+  }
+  .m_switch_checked {
+    left: 61% !important;
+  }
+  .m_switch_color {
+    background: $background !important;
   }
 }
 
