--- a/pages/index.scss
+++ b/pages/index.scss
@@ -355,3 +355,10 @@
 @import '../Common.blocks/FormElements/-RadioButtons/FormElements-RadioButtons';
 @import '../Common.blocks/FormElements/-RadioButtonsTitle/FormElements-RadioButtonsTitle';
 @import '../Common.blocks/FormElements/-RadioButtonsTitle/FormElements-RadioButtonsTitle';
+
+@import '../Common.blocks/FormElements/-Toggle/FormElements-Toggle';
+@import '../Common.blocks/FormElements/-ToggleTitle/FormElements-ToggleTitle';
+@import '../Common.blocks/ToggleBlock/ToggleBlock';
+@import '../Common.blocks/ToggleButton/ToggleButton';
+@import '../Common.blocks/ToggleBlock/-Descr/ToggleBlock-Descr';
+@import '../Common.blocks/FormElements/-ToggleSecond/FormElements-ToggleSecond';
