--- a/pages/index.scss
+++ b/pages/index.scss
@@ -362,3 +362,8 @@
 @import '../Common.blocks/ToggleButton/ToggleButton';
 @import '../Common.blocks/ToggleBlock/-Descr/ToggleBlock-Descr';
 @import '../Common.blocks/FormElements/-ToggleSecond/FormElements-ToggleSecond';
+@import '../Common.blocks/FormElements/-LikeButtons/FormElements-LikeButtons';
+@import '../Common.blocks/FormElements/-LikeBtnsWrapper/FormElements-LikeBtnsWrapper';
+@import '../Common.blocks/FormElements/-LikeBtnSeparator/FormElements-LikeBtnSeparator';
+@import '../Common.blocks/FormElements/-ToggleSeparator/FormElements-ToggleSeparator';
+@import '../Common.blocks/FormElements/-LikeButtonsTitle/FormElements-LikeButtonsTitle';
