Rate buttons refactoring complete

--- a/Common.blocks/FormElements/-LikeButtons/FormElements-LikeButtons.scss
+++ b/Common.blocks/FormElements/-LikeButtons/FormElements-LikeButtons.scss
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .FormElements-LikeButtons {
-
+    margin-bottom: 41px;
   }
 }
 
