--- a/pages/index.scss
+++ b/pages/index.scss
@@ -367,3 +367,9 @@
 @import '../Common.blocks/FormElements/-LikeBtnSeparator/FormElements-LikeBtnSeparator';
 @import '../Common.blocks/FormElements/-ToggleSeparator/FormElements-ToggleSeparator';
 @import '../Common.blocks/FormElements/-LikeButtonsTitle/FormElements-LikeButtonsTitle';
+@import '../Common.blocks/FormElements/-RateButtons/FormElements-RateButtons';
+@import '../Common.blocks/FormElements/-RateButtonsTitle/FormElements-RateButtonsTitle';
+@import '../Common.blocks/FormElements/-RateButtonWrapper/FormElements-RateButtonWrapper';
+@import '../Common.blocks/FormElements/-RateButtons/FormElements-RateButtons';
+@import '../Common.blocks/FormElements/-RateButtonsSeparator/FormElements-RateButtonsSeparator';
+@import '../Common.blocks/RateButton/-ListStars/RateButton-ListStars';
