--- a/Common.blocks/FormElements/-RateButtonWrapper/FormElements-RateButtonWrapper.scss
+++ b/Common.blocks/FormElements/-RateButtonWrapper/FormElements-RateButtonWrapper.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .LikeButton {
-    cursor: pointer;
+  .FormElements-RateButtonWrapper {
+    display: flex;
+    flex-direction: row;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .LikeButton {
+  .FormElements-RateButtonWrapper {
 
   }
 }
