--- a/Common.blocks/FormElements/-RateButtons/FormElements-RateButtons.scss
+++ b/Common.blocks/FormElements/-RateButtons/FormElements-RateButtons.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .LikeButton {
-    cursor: pointer;
+  .FormElements-RateButtons {
+
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .LikeButton {
+  .FormElements-RateButtons {
 
   }
 }
