Create the new branch "backup"

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -659,4 +659,4 @@ html
 // коммент
 // провырить форм тег и як использууться на макеты блоки
 // рефакторинг
-
+//У меня есть миксин в котором я пишу любое число (можно и не целое) и оно создает соответственно нужное количество звезд
