added body-text block

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,9 @@
+include ../Common.blocks/html/html.pug
+include ../Common.blocks/html/html.pug
+include ../Common.blocks/html/html.pug
+include ../Common.blocks/html/html.pug
+include ../Common.blocks/body-text/body-text.pug
+include ../Common.blocks/html/html.pug
 include ../Common.blocks/RateButton/-ListStars/RateButton-ListStars.pug
 include ../Common.blocks/FormElements/-RateButtonsSeparator/FormElements-RateButtonsSeparator.pug
 include ../Common.blocks/FormElements/-RateButtons/FormElements-RateButtons.pug
@@ -660,3 +666,10 @@ html
 // провырить форм тег и як использууться на макеты блоки
 // рефакторинг
 //У меня есть миксин в котором я пишу любое число (можно и не целое) и оно создает соответственно нужное количество звезд
+
++html()
++body-text()
++html()
++html()
++html()
++html()
