--- a/pages/index.scss
+++ b/pages/index.scss
@@ -373,3 +373,14 @@
 @import '../Common.blocks/FormElements/-RateButtons/FormElements-RateButtons';
 @import '../Common.blocks/FormElements/-RateButtonsSeparator/FormElements-RateButtonsSeparator';
 @import '../Common.blocks/RateButton/-ListStars/RateButton-ListStars';
+@import '../Common.blocks/block-name/__elem-name/mod-name_mod-val/block-name__elem-name_mod-name_mod-val';
+@import '../Common.blocks/block-name2/__elem-name/_mod-name_mod-val/block-name2__elem-name_mod-name_mod-val';
+@import '../Common.blocks/block-name2/__elem-name/_mod-name/block-name2__elem-name_mod-name_mod-val2';
+@import '../Common.blocks/block-name2/__elem-name/_mod-name2/block-name2__elem-name_mod-name2_mod-val2';
+@import '../Common.blocks/block-name2/__elem-name/_mod-name/block-name2__elem-name_mod-name_green-greyed';
+@import '../Common.blocks/html/html';
+@import '../Common.blocks/body-text/body-text';
+@import '../Common.blocks/html/html';
+@import '../Common.blocks/html/html';
+@import '../Common.blocks/html/html';
+@import '../Common.blocks/html/html';
