--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/label-text/label-text.pug
 include ../Common.blocks/html/html.pug
 include ../Common.blocks/html/html.pug
 include ../Common.blocks/html/html.pug
@@ -673,3 +674,4 @@ html
 +html()
 +html()
 +html()
++label-text()
