--- a/pages/index.scss
+++ b/pages/index.scss
@@ -384,3 +384,4 @@
 @import '../Common.blocks/html/html';
 @import '../Common.blocks/html/html';
 @import '../Common.blocks/html/html';
+@import '../Common.blocks/label-text/label-text';
