added widget-title block

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/widget-title/widget-title.pug
 include ../Common.blocks/label-text/label-text.pug
 include ../Common.blocks/html/html.pug
 include ../Common.blocks/html/html.pug
@@ -675,3 +676,4 @@ html
 +html()
 +html()
 +label-text()
++widget-title()
