--- a/pages/index.scss
+++ b/pages/index.scss
@@ -385,3 +385,4 @@
 @import '../Common.blocks/html/html';
 @import '../Common.blocks/html/html';
 @import '../Common.blocks/label-text/label-text';
+@import '../Common.blocks/widget-title/widget-title';
