added main-title block

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/main-title/main-title.pug
 include ../Common.blocks/widget-title/widget-title.pug
 include ../Common.blocks/label-text/label-text.pug
 include ../Common.blocks/html/html.pug
@@ -677,3 +678,4 @@ html
 +html()
 +label-text()
 +widget-title()
++main-title()
