--- a/pages/index.scss
+++ b/pages/index.scss
@@ -386,3 +386,4 @@
 @import '../Common.blocks/html/html';
 @import '../Common.blocks/label-text/label-text';
 @import '../Common.blocks/widget-title/widget-title';
+@import '../Common.blocks/main-title/main-title';
