added block container and elements __layout-logo and __layout

--- a/Common.blocks/Container/__layout/_theme/container__layout_theme_colors-fonts.scss
+++ b/Common.blocks/Container/__layout/_theme/container__layout_theme_colors-fonts.scss
@@ -1,45 +1,45 @@
-.container {
-  width: 100%;
+.container__layout_theme_colors-fonts {
+
 }
 
 @media only screen and (min-width: 321px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container {
+  .container__layout_theme_colors-fonts {
 
   }
 }
