--- a/Common.blocks/Container/__layout-logo/container__layout-logo.pug
+++ b/Common.blocks/Container/__layout-logo/container__layout-logo.pug
@@ -1,8 +1,8 @@
-mixin container__layout(args)
+mixin container__layout-logo(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
             -modifierNames += 'container__layout_' + key + '__' + val
-    div.container__layout&attributes(attributes)(class=modifierNames)
+    div.container__layout-logo&attributes(attributes)(class=modifierNames)
         if block
             block
