--- a/Common.blocks/Container/__layout-logo/container__layout-logo.scss
+++ b/Common.blocks/Container/__layout-logo/container__layout-logo.scss
@@ -1,45 +1,45 @@
-.container__layout {
+.container__layout-logo {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container__layout {
+  .container__layout-logo {
 
   }
 }
