added block uikit-logo

--- a/Common.blocks/Container/container.pug
+++ b/Common.blocks/Container/container.pug
@@ -1,3 +1,5 @@
+include ./__layout-logo/container__layout-logo.pug
+include ./__layout/container__layout.pug
 mixin container(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
