--- a/Common.blocks/uikit-logo/uikit-logo.scss
+++ b/Common.blocks/uikit-logo/uikit-logo.scss
@@ -1,49 +1,46 @@
-.container {
+.uikit-logo {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container {
+  .uikit-logo {
 
   }
 }
 
-@import './__layout/container__layout';
-@import './__layout/_theme/container__layout_theme_colors-fonts';
-@import './__layout-logo/container__layout-logo';
