--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,8 +1,4 @@
-include ../Common.blocks/container/__layout-logo/container__layout-logo.pug
-include ../Common.blocks/container/container.pug
-include ../Common.blocks/container/container.pug
-include ../Common.blocks/container/__layout/container__layout.pug
-include ../Common.blocks/container/__layout/container__layout.pug
+include ../Common.blocks/uikit-logo/uikit-logo.pug
 include ../Common.blocks/container/container.pug
 
 
@@ -23,4 +19,5 @@ html
             +container__layout({theme: 'colors-fonts'})
 
                 +container__layout-logo
+                    +uikit-logo
 
