changed bemf.js utility for component architecture

--- a/Common.blocks/Container/container.pug
+++ b/Common.blocks/Container/container.pug
@@ -1,3 +1,4 @@
+include ./__layout-examples/container__layout-examples.pug
 include ./__layout-logo/container__layout-logo.pug
 include ./__layout/container__layout.pug
 mixin container(args)
