--- a/Common.blocks/Container/__layout-examples/container__layout-examples.scss
+++ b/Common.blocks/Container/__layout-examples/container__layout-examples.scss
@@ -1,50 +1,52 @@
-.container {
+.container__layout-examples {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container {
+  .container__layout-examples {
 
   }
 }
 
-@import './__layout/container__layout';
-@import './__layout/_theme/container__layout_theme_colors-fonts';
-@import './__layout-logo/container__layout-logo';
-@import './__layout-examples/container__layout-examples';
+@media only screen and (min-width: 1681px) {
+  .container__layout-examples {
+
+  }
+}
+
