added component color-example

--- a/Common.blocks/Container/container.scss
+++ b/Common.blocks/Container/container.scss
@@ -48,3 +48,6 @@
 @import './__layout/_theme/container__layout_theme_colors-fonts';
 @import './__layout-logo/container__layout-logo';
 @import './__layout-examples/container__layout-examples';
+@import './__layout/_theme/container__layout_theme_colors-fonts';
+@import './__layout-colors/container__layout-colors';
+@import './__layout-fonts/container__layout-fonts';
