--- a/pages/index.scss
+++ b/pages/index.scss
@@ -387,3 +387,4 @@
 
 @import '../Common.blocks/container/container';
 @import '../Common.blocks/uikit-logo/uikit-logo';
+@import '../Common.blocks/color-example/color-example';
