--- a/Common.blocks/Container/container.pug
+++ b/Common.blocks/Container/container.pug
@@ -1,3 +1,5 @@
+include ./__layout-fonts/container__layout-fonts.pug
+include ./__layout-colors/container__layout-colors.pug
 include ./__layout-examples/container__layout-examples.pug
 include ./__layout-logo/container__layout-logo.pug
 include ./__layout/container__layout.pug
