--- a/Common.blocks/color-example/color-example.scss
+++ b/Common.blocks/color-example/color-example.scss
@@ -1,52 +1,55 @@
-.container__layout_theme_colors-fonts {
+.color-example {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .container__layout_theme_colors-fonts {
+  .color-example {
 
   }
 }
 
+
+@import './__image/color-example__image';
+@import './__description/color-example__description';
