--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/color-example/color-example.pug
 include ../Common.blocks/uikit-logo/uikit-logo.pug
 include ../Common.blocks/container/container.pug
 
@@ -21,5 +22,10 @@ html
                 +container__layout-logo
                     +uikit-logo
 
+                +container__layout-examples
 
-+container__layout-examples
+                    +container__layout-colors
++container__layout-fonts
++color-example
++color-example__image
++color-example__description
