created universal mixin for any the .pug component

--- a/Common.blocks/Container/__layout-fonts/container__layout-fonts.pug
+++ b/Common.blocks/Container/__layout-fonts/container__layout-fonts.pug
@@ -2,7 +2,7 @@ mixin container__layout-fonts(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'container__layout-fonts_' + key + '_' + val
     div.container__layout-fonts&attributes(attributes)(class=modifierNames)
         if block
             block
