--- a/tags.pug
+++ b/tags.pug
@@ -14,8 +14,8 @@ body
                     +color-example
                         +color-example__image
                         +color-example__description
-                            +medium-title Dark Shade 100%
-                            +medium-title({text: 'uppercase', font: 'normal'}) #1F2041
+                            +inner-title Dark Shade 100%
+                            +inner-title({text: 'uppercase', font: 'normal'}) #1F2041
                             //...
 
                 +container__layout-fonts
@@ -30,7 +30,7 @@ body
                         +font-example_tag-name
                             +body-text({font: 'medium', color: 'dark-shade25'}) H2
                         +font-example_name
-                            +medium-title Next one is the item title inside widgets
+                            +inner-title Next one is the item title inside widgets
 
                     +font-example
                         +font-example_tag-name
@@ -561,7 +561,7 @@ body
                             +reserve-card__header
                                 +reserve-card__room-descr
                                     +reserve-card__room-number
-                                        +medium-title({font: 'bold'}) № 888
+                                        +inner-title({font: 'bold'}) № 888
                                     +reserve-card__room-properties
                                         +label-text({color: 'purple'}) люкс
                                 +reserve-card__daily-payment
@@ -613,9 +613,9 @@ body
 
                         +reserve-card__total-price
                             +reserve-card__total
-                                +medium-title Итого
+                                +inner-title Итого
                             +reserve-card__full-price
-                                +medium-title 38 081₽
+                                +inner-title 38 081₽
                         +reserve-card__reverse-button
                             +button({theme: 'pay-button'})
                                 +label-text забронировать
@@ -659,7 +659,7 @@ body
                             +room-card__header
                                 +room-card__room-descr
                                     +room-card__room-number
-                                        +medium-title({font: 'bold'}) № 888
+                                        +inner-title({font: 'bold'}) № 888
                                     +room-card__room-properties
                                         +label-text({color: 'purple'}) люкс
                                 +room-card__daily-payment
@@ -686,7 +686,7 @@ body
                             +room-card__header
                                 +room-card__room-descr
                                     +room-card__room-number
-                                        +medium-title({font: 'bold'}) № 840
+                                        +inner-title({font: 'bold'}) № 840
                                 +room-card__daily-payment
                                     +body-text({font: 'bold'}) 9 990₽
                                     +body-text в сутки
@@ -1003,5 +1003,5 @@ body
 //
 //+body-text
 //+widget-title
-//+medium-title
+//+inner-title
 //+label-text
