--- a/Common.blocks/Container/__layout-colors/container__layout-colors.pug
+++ b/Common.blocks/Container/__layout-colors/container__layout-colors.pug
@@ -2,7 +2,7 @@ mixin container__layout-colors(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'container__layout-colors_' + key + '_' + val
     div.container__layout-colors&attributes(attributes)(class=modifierNames)
         if block
             block
