--- a/Common.blocks/Container/__layout-examples/container__layout-examples.pug
+++ b/Common.blocks/Container/__layout-examples/container__layout-examples.pug
@@ -2,7 +2,7 @@ mixin container__layout-examples(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'container__layout-examples_' + key + '_' + val
     div.container__layout-examples&attributes(attributes)(class=modifierNames)
         if block
             block
