--- a/Common.blocks/Container/__layout-logo/container__layout-logo.pug
+++ b/Common.blocks/Container/__layout-logo/container__layout-logo.pug
@@ -2,7 +2,7 @@ mixin container__layout-logo(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'container__layout-logo_' + key + '_' + val
     div.container__layout-logo&attributes(attributes)(class=modifierNames)
         if block
             block
