--- a/Common.blocks/Container/__layout/container__layout.pug
+++ b/Common.blocks/Container/__layout/container__layout.pug
@@ -2,7 +2,7 @@ mixin container__layout(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'container__layout_' + key + '_' + val
     div.container__layout&attributes(attributes)(class=modifierNames)
         if block
             block
