--- a/Common.blocks/color-example/__description/color-example__description.pug
+++ b/Common.blocks/color-example/__description/color-example__description.pug
@@ -2,7 +2,7 @@ mixin color-example__description(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -modifierNames += 'color-example__description_' + key + '_' + val
     div.color-example__description&attributes(attributes)(class=modifierNames)
         if block
             block
