--- a/Common.blocks/color-example/__image/color-example__image.pug
+++ b/Common.blocks/color-example/__image/color-example__image.pug
@@ -2,7 +2,7 @@ mixin color-example__image(args)
     -let modifierNames = '';
     -if (args === undefined) args = '';
         each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
+            -if (val !== undefined) modifierNames += 'color-example__image_' + key + '_' + val
     div.color-example__image&attributes(attributes)(class=modifierNames)
         if block
             block
