--- a/Common.blocks/color-example/color-example.pug
+++ b/Common.blocks/color-example/color-example.pug
@@ -1,10 +1,18 @@
+include ../inner-title/inner-title.pug
 include ./__description/color-example__description.pug
 include ./__image/color-example__image.pug
-mixin color-example(args)
+
+mixin color-example(modifiers, ...argsArr)
     -let modifierNames = '';
-    -if (args === undefined) args = '';
-        each val, key in args
-            -modifierNames += 'container__layout_' + key + '__' + val
-    div.color-example&attributes(attributes)(class=modifierNames)
+    -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
+    -if (args.tag === undefined) args.tag = 'div';
+    -if (modifiers === undefined) modifiers = '';
+        each val, key in modifiers
+            -if(val !== undefined) modifierNames += 'color-example_' + key + '_' + val + ' ';
+    #{args.tag}.color-example&attributes(attributes)(class=modifierNames)
+        +color-example__image({theme: args.theme})
+        +color-example__description
+            +inner-title({tag: 'span'}) #{args.colorName}
+            +inner-title({text: 'uppercase', font: 'normal'}) #{args.hexColor}
         if block
             block
