--- a/pages/index.scss
+++ b/pages/index.scss
@@ -388,3 +388,4 @@
 @import '../Common.blocks/container/container';
 @import '../Common.blocks/uikit-logo/uikit-logo';
 @import '../Common.blocks/color-example/color-example';
+@import '../Common.blocks/inner-title/inner-title';
