--- a/Common.blocks/Container/container.scss
+++ b/Common.blocks/Container/container.scss
@@ -44,10 +44,9 @@
   }
 }
 
-@import './__layout/container__layout';
-@import './__layout/_theme/container__layout_theme_colors-fonts';
-@import './__layout-logo/container__layout-logo';
-@import './__layout-examples/container__layout-examples';
-@import './__layout/_theme/container__layout_theme_colors-fonts';
-@import './__layout-colors/container__layout-colors';
-@import './__layout-fonts/container__layout-fonts';
+@media only screen and (min-width: 1681px) {
+  .container {
+
+  }
+}
+
