--- a/pages/index.scss
+++ b/pages/index.scss
@@ -389,3 +389,4 @@
 @import '../Common.blocks/uikit-logo/uikit-logo';
 @import '../Common.blocks/color-example/color-example';
 @import '../Common.blocks/inner-title/inner-title';
+@import '../Common.blocks/container/container';
