--- a/Common.blocks/Container/__layout-colors/container__layout-colors.pug
+++ b/Common.blocks/Container/__layout-colors/container__layout-colors.pug
@@ -1,8 +1,10 @@
-mixin container__layout-colors(args)
+mixin container__layout-colors(modifiers, ...argsArr)
     -let modifierNames = '';
-    -if (args === undefined) args = '';
-        each val, key in args
-            -modifierNames += 'container__layout-colors_' + key + '_' + val
-    div.container__layout-colors&attributes(attributes)(class=modifierNames)
+    -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
+    -if (args.tag === undefined) args.tag = 'div';
+    -if (modifiers === undefined) modifiers = '';
+    each val, key in modifiers
+        -if (val !== undefined) modifierNames += 'container__layout-colors_' + key + '_' + val + ' ';
+    #{args.tag}.container__layout-colors&attributes(attributes)(class=modifierNames)
         if block
             block
